<resources>
    <string name="app_name">CleanArchitecture</string>
    <string name="generic_error">Something went wrong.</string>
    <string name="database_error">Couldn\'t load values from database</string>
    <string name="connection_error">Please check your internet connection</string>
    <string name="server_error">A server error occurred, please try again later</string>
    <string name="media_detail_release_date">Release Date: %1$s</string>
    <string name="media_detail_language">Language: %1$s</string>
    <string name="no_internet_placeholder_text">%1$s Swipe down to retry.</string>
    <string name="no_results_placeholder_text">There are no results found.</string>
    <string name="movie_list_toolbar_title">Movies</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="movie_details_toolbar_title">Details</string>
    <string name="header_trending">Trending</string>
    <string name="available_watch_providers">Available on: %1$s</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_settings">Settings</string>
    <string name="action_watch_providers">Watch providers</string>
    <string name="watch_providers">Watch Providers</string>
    <string name="ok">ok</string>

    <string name="preferences_display_dark_mode">Dark mode</string>
    <string name="preferences_display_theme">Theme</string>
    <string name="preferences_app_version_title">App version</string>
    <string name="preferences_general_header">General</string>
    <string name="preferences_display_header">Display</string>
    <string name="preferences_about_header">About</string>

    <string-array name="night_mode_items">
        <item>@string/night_mode_label_auto</item>
        <item>@string/night_mode_label_off</item>
        <item>@string/night_mode_label_on</item>
    </string-array>
    <string-array name="night_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="night_mode_label_auto">Follow system</string>
    <string name="night_mode_label_off">Off</string>
    <string name="night_mode_label_on">On</string>

    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="theme_items">
        <item>@string/theme_label_default</item>
        <item>@string/theme_label_red</item>
        <item>@string/theme_label_green</item>
    </string-array>
    <string name="theme_label_default">Blue</string>
    <string name="theme_label_red">Red</string>
    <string name="theme_label_green">Green</string>

    <string name="loading">loading…</string>
    <string name="region">Region</string>
    <string name="region_error">Can\'t load regions</string>
    <string name="select_region">Select a region</string>
    <string name="also_watch">Also watch</string>
    <string name="cast">Cast</string>
    <string name="statistic_rating_overline">Rating</string>
    <string name="statistic_status_overline">Status</string>
    <string name="statistic_popularity_overline">Popularity</string>
    <string name="rating_max">/10</string>
    <string name="character">as %1$s</string>
    <string name="show_more">Show more</string>

</resources>